tests/baselines/reference/parser618973.errors.txt
==== tests/cases/compiler/parser618973.ts (1 errors) ====
    export export class Foo {
           ~~~~~~
!!! parser618973.ts(1,8): error TS1030: 'export' modifier already seen.
      public Bar() {
      }
    }